# quantitative-analysis-platform

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker.compose.prod.yml  news_demo.py  pyproject.toml  railway.json  render.yaml  startup.sh  tmp_down.py
backend/: Dockerfile  celery_worker.py  main.py  requirements.txt  schemas.py  tmp.py
backend/alembic/: env.py
backend/alembic/versions/: 17ec047335c5_create_analysis_jobs_table.py  7bad611f5ad5_create_initial_tables.py
backend/core/: config.py  database.py
backend/models/: analysis_job.py
backend/tasks/: advisor_tasks.py  analyst_tasks.py  coordinator_task.py  data_tasks.py  main_task.py  news_tasks.py  prediction_tasks.py
backend/tools/: advisor_tools.py  analyst_tools.py  data_tools.py  download_model.py  news_tools.py  prediction_tools.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/components/: Header.jsx  HistoricalChart.jsx  HistoryPanel.jsx  JobForm.jsx  JobStatusCard.jsx  LoadingSkeleton.jsx  PredictionChart.jsx  ResultsDisplay.jsx
frontend/src/services/: api.js
ml_models/: README.md  config.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
